added new design ideas

--- a/oakland/design.tex
+++ b/oakland/design.tex
@@ -1,7 +1,7 @@
 \section{Design}
 \label{sec:design}
 We describe the evolution of the design of \system{} starting with an initial strawman approach.  We then 
-alter the design as we address each of the design goals discussed in the previous section (and in Table \ref{tab:design_goals}), which brings us 
+alter the design to address each of the design goals discussed in the previous section, which brings us 
 to a complete design.
 
 \subsection{Strawman: Hiding Information From CDN}
@@ -41,9 +41,7 @@ This strawman approach obfuscates content from the viewpoint of the CDN, which a
 to claim plausible deniability when served with a subpoena.  Despite only caching encrypted and obfuscated 
 content and identifiers, the CDN still has knowledge of which clients are requesting any content and how often 
 they are requesting content.  Unfortunately, this approach raises 
-many questions: are anonymizing proxies/VPNs trustworthy?, should clients be trusted to know $k$?, 
-can any jurisdiction still subpoena the CDN for information (presumably the CDN has locations in many 
-countries and clients in many countries)?, and if a subpoena is served, what is learned?
+ questions: are anonymizing proxies/VPNs trustworthy?, should clients be trusted to know $k$?, 
 
 \begin{figure}[t!]
 \centering
@@ -65,7 +63,7 @@ can achieve a level of anonymity.
 \paragraph{Hiding Clients' Identities} By replacing the use of an anonymizing proxy or VPN with the use of 
 a series of proxies---some of which are supplied by \system{} and some of which are simply other clients---, 
 the system can provide unlinkability of client to her requests/responses. There are two distinct sets of 
-proxies: 1) exit proxies and 2) client proxies.  We discuss in Section \ref{sec:xx} how these can be run by different 
+proxies: 1) exit proxies and 2) client proxies.  We discuss in Section \ref{sec:discussion} how these can be run by different 
 entities.  Exit proxies provide a way of requesting encrypted content from CDNs; these proxies store the keys generated 
 by content publishers (as described in the strawman approach).  Client proxies provide 
 a way for any client to route her traffic to an exit proxy, while hiding her identity.  When requesting content, she 
@@ -133,8 +131,9 @@ made possible by the use of proxies are discussed in Section \ref{sec:optimizati
 \subsection{Key Use and Management}
 \label{sec:keys}
 The design has evolved into a system where: 1) the CDN does not know the content, the content identifier, 
-or which clients are accessing any content, 2) the client's data is only subject to subpoenas in her jurisdiction 
-(or the jurisdiction of the proxy), 3) trust has been distributed, as opposed to centralized.  There are still 
+or which clients are accessing any content, 2) other clients do not know which client requested which content, and 
+3) the exit proxies do not know which clients are accessing which content (although, they do know what content is
+being requested by \system{} users).  There are still 
 some remaining security vulnerabilities that must be addressed.  First, simply hashing the URL allows an attacker who simply 
 wishes to guess whether the obfuscated URL is a specified plaintext URL or not.  Second, the shared key $k$ for each content 
 publisher has the potential to be compromised, and therefore, OCDN must have a way to create new keys and replace 
