--- a/oakland/sigproc.bib
+++ b/oakland/sigproc.bib
@@ -17,6 +17,13 @@
   year={2016}
 }
 
+@phdthesis{mazieres2000self,
+  title={Self-certifying file system},
+  author={Mazi{\`e}res, David David Folkman},
+  year={2000},
+  school={Massachusetts Institute of Technology}
+}
+
 @article{xue2017cdns,
   title={{CDNs} Meet {CN}: An Empirical Study of {CDN} Deployments in China},
   author={Xue, Jingan and Choffnes, David and Wang, Jilong},
