--- a/oakland/security.tex
+++ b/oakland/security.tex
@@ -1,6 +1,8 @@
 \section{Security Analysis}
 \label{sec:sec}
-We analyze and discuss how \system{} addresses different attacks.
+We analyze and discuss how \system{} addresses different attacks.  Table \ref{tab:sec_table} 
+shows what security and privacy features \system{} provides in comparison to other related 
+systems.
 
 \begin{table}[t!]
 \centering
