updated performance graphs, and refs in paper

--- a/oakland/threat_model.tex
+++ b/oakland/threat_model.tex
@@ -35,8 +35,8 @@ To protect against the attackers described in Section
 Each stakeholder, in this case the content publisher, the CDN, and the client, each have 
 different risks, and therefore should have different protections.  All three stakeholders 
 can be protected by preventing CDNs from learning information, decoupling content distribution from trust, and 
-maintaining the performance benefits of a CDN while reducing the probability of attacks.  Our design goals are listed in Table \ref{tab:design_goals}, 
-and we further discuss our design decisions in Section \ref{sec:design}.
+maintaining the performance benefits of a CDN while reducing the probability of attacks.  
+We further discuss our design decisions in Section \ref{sec:design}.
 
 %\begin{table*}[t!]
 %\centering
