--- a/oakland/design.tex
+++ b/oakland/design.tex
@@ -41,7 +41,7 @@ This strawman approach obfuscates content from the viewpoint of the CDN, which a
 to claim plausible deniability when served with a subpoena.  Despite only caching encrypted and obfuscated 
 content and identifiers, the CDN still has knowledge of which clients are requesting any content and how often 
 they are requesting content.  Unfortunately, this approach raises 
- questions: are anonymizing proxies/VPNs trustworthy?, should clients be trusted to know $k$?, 
+ questions: are anonymizing proxies/VPNs trustworthy?, should clients be trusted to know $k$?
 
 \begin{figure}[t!]
 \centering
@@ -151,9 +151,9 @@ compromised, then all proxies have a compromised $k$ for that content publisher.
 is for the content publisher to generate a different $k$ for each proxy; unfortunately, this defeats the purpose of 
 CDNs caching content.  The approach \system{} takes is for each content publisher to generate a single shared key $k$, 
 and for a single proxy to hold that key; this maximizes the use of the CDNs caches.  The shared key is assigned 
-to an exit proxy based on consistent hashing~\cite{????}, which provides load balancing properties.  For more popular 
+to an exit proxy based on consistent hashing~\cite{karger1997consistent,lewin1998consistent}, which provides load balancing properties.  For more popular 
 content, it may be useful to have more than one exit proxy serving that content; in this case, a few exit proxies can 
-hold this key.  We discuss this case in more detail in Section \ref{sec:xx}.
+hold this key.  We discuss this case in more detail in Section \ref{sec:optimizations}.
 
 \paragraph{Key Churn} To protect against attacks when a content publisher's shared key $k$ is compromised, the publisher
 should generate a new key $k$ and encrypt her content under the new key.  Keys have an expiration timestamp that indicates 
