--- a/oakland/sigproc.bib
+++ b/oakland/sigproc.bib
@@ -9,6 +9,22 @@
   publisher={IEEE Press}
 }
 
+@inproceedings{karger1997consistent,
+  title={Consistent hashing and random trees: Distributed caching protocols for relieving hot spots on the World Wide Web},
+  author={Karger, David and Lehman, Eric and Leighton, Tom and Panigrahy, Rina and Levine, Matthew and Lewin, Daniel},
+  booktitle={Proceedings of the twenty-ninth annual ACM symposium on Theory of computing},
+  pages={654--663},
+  year={1997},
+  organization={ACM}
+}
+
+@phdthesis{lewin1998consistent,
+  title={Consistent hashing and random trees: Algorithms for caching in distributed networks},
+  author={Lewin, Daniel Mark},
+  year={1998},
+  school={Massachusetts Institute of Technology}
+}
+
 @inproceedings{gupta2016scalable,
   title={Scalable and Private Media Consumption with Popcorn.},
   author={Gupta, Trinabh and Crooks, Natacha and Mulhern, Whitney and Setty, Srinath TV and Alvisi, Lorenzo and Walfish, Michael},
