added retrieving content diagram

--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -170,7 +170,7 @@ publishers, CDNs, and clients that use \system{}.
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.5\textwidth]{retrieving_content_new2}
+\includegraphics[width=.4\textwidth]{request_diagram_simple}
 \caption{Steps for retrieving content in \system{}.}
 \label{fig:retrieving}
 \end{figure}
