added request figures

--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -177,7 +177,7 @@ publishers, CDNs, and clients that use \system{}.
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.5\textwidth]{retrieving_content_new_complex2}
+\includegraphics[width=.5\textwidth]{request_diagram_complex}
 \caption{Steps for retrieving content in \system{}.}
 \label{fig:retrieving2}
 \end{figure}
