--- a/oakland/design.tex
+++ b/oakland/design.tex
@@ -151,7 +151,8 @@ compromised, then all proxies have a compromised $k$ for that content publisher.
 is for the content publisher to generate a different $k$ for each proxy; unfortunately, this defeats the purpose of 
 CDNs caching content.  The approach \system{} takes is for each content publisher to generate a single shared key $k$, 
 and for a single proxy to hold that key; this maximizes the use of the CDNs caches.  The shared key is assigned 
-to an exit proxy based on consistent hashing~\cite{karger1997consistent,lewin1998consistent}, which provides load balancing properties.  For more popular 
+to an exit proxy based on consistent hashing~\cite{karger1997consistent,lewin1998consistent}, which provides load balancing properties. 
+\annie{Should we describe consistent hashing (at a high level)?  Where is a good place for that?} For more popular 
 content, it may be useful to have more than one exit proxy serving that content; in this case, a few exit proxies can 
 hold this key.  We discuss this case in more detail in Section \ref{sec:optimizations}.
 
