--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -1,7 +1,7 @@
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.45\textwidth]{publishing_content_new2}
-\caption{Step-by-step instructions on how content is published in \system{}.}
+\caption{How content is published in \system{}.}
 \label{fig:publishing}
 \end{figure}
 
@@ -176,14 +176,17 @@ publishers, CDNs, and clients that use \system{}.
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.4\textwidth]{request_diagram_simple}
-\caption{Steps for retrieving content in \system{}.}
+\caption{Steps for retrieving content in \system{} when a client is prioritizing 
+performance and goes directly to an exit proxy.}
 \label{fig:retrieving}
 \end{figure}
 
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.5\textwidth]{request_diagram_complex}
-\caption{Steps for retrieving content in \system{}.}
+\caption{Steps for retrieving content in \system{} when a client is prioritizing 
+privacy and proxies her request through two other clients before reaching the 
+exit proxy.}
 \label{fig:retrieving2}
 \end{figure}
 
@@ -216,7 +219,7 @@ is not susceptible to flashcrowds correlations and can still join the system.
 \begin{figure}[t]
 \centering
 \includegraphics[width=.45\textwidth]{key_lookup}
-\caption{Steps for distributing keys to proxies.}
+\caption{Steps for certifying exit proxies and distributing shared keys to exit proxies.}
 \label{fig:keys}
 \end{figure}
 
