--- a/oakland/security.tex
+++ b/oakland/security.tex
@@ -18,7 +18,8 @@ systems.
  Tor~\cite{dingledine2004tor} & {} & {} & \checkmark \\
 \hline
 \end{tabular}
-\caption{The security and privacy features offered by related systems.}
+\caption{The security and privacy features offered by related systems.  To our knowledge, 
+\system{} is the first to address confidentiality at the CDN.}
 \label{tab:sec_table}
 \end{table}
 
