--- a/oakland/performance.tex
+++ b/oakland/performance.tex
@@ -20,7 +20,7 @@ is visible by looking at the smaller file sizes.
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.5\textwidth]{TTFB}
-\caption{Time to first byte.}
+\caption{Time to First Byte measurements with and without \system{}.}
 \label{fig:ttfb}
 \end{figure}
 
@@ -33,7 +33,7 @@ many cryptographic operations and proxies traffic between the client and the CDN
 \begin{figure}[b!]
 \centering
 \includegraphics[width=.5\textwidth]{completion}
-\caption{Time for completion.}
+\caption{Time to complete a request with and without \system{}.}
 \label{fig:completion}
 \end{figure}
 
@@ -49,7 +49,8 @@ grows more quickly than TTFB as the file size and latency increase.
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.5\textwidth]{Latency}
-\caption{Latency.}
+\caption{Time to First Byte and time to complete a request with varying the file size and latency; increasing the latency is representative 
+of increasing the number of client proxies on the path to the exit proxy.}
 \label{fig:latency}
 \end{figure}
 
@@ -63,7 +64,7 @@ decrypting the response with the session key $k_{session}$.
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.5\textwidth]{loggrouped}
-\caption{Overhead of different operations}
+\caption{Overhead of different operations performed by \system{}.}
 \label{fig:overhead2}
 \end{figure}
 
