--- a/oakland/related_work.tex
+++ b/oakland/related_work.tex
@@ -22,7 +22,7 @@ systems like Stickler do not protect against an adversary that wishes to learn i
 or publishers; \system{} is complementary to Stickler.
 
 There has been prior work in securing CDNs against DDoS attacks; Gilad 
-et. al., introduce a DDoS defense called CDN-on-Demand~\cite{gilad2016cdn}.  In this work they 
+et al. introduce a DDoS defense called CDN-on-Demand~\cite{gilad2016cdn}.  In this work they 
 provide a complement to CDNs, as some smaller organizations cannot afford the use of CDNs and 
 therefore do not receive the DDoS protections provided by them.  CDN-on-Demand is a software 
 defense that relies on managing flexible cloud resources as opposed to using a CDN provider's 
