--- a/oakland/abstract.tex
+++ b/oakland/abstract.tex
@@ -1,13 +1,13 @@
 \begin{abstract}  
 As publishers increasingly use Content Distribution Networks
-(CDNs) to distribute content across geographically diverse networks of
-proxies, CDNs themselves are becoming unwitting targets of requests for both
+(CDNs) to distribute content across geographically diverse networks, 
+CDNs themselves are becoming unwitting targets of requests for both
 access to user data and content takedown. From copyright infringement to
 moderation of online speech, CDNs have found themselves at the forefront of a
 many recent legal quandaries. At the heart of the tension, however, is the fact
 that CDNs have rich information both about the content they are serving and the
 users who are requesting that content. 
-This paper offers a technical contribution that relevant to this ongoing tension
+This paper offers a technical contribution that is relevant to this ongoing tension
 with design of an Oblivious CDN (OCDN), a CDN that is both compatible with the existing
 Web ecosystem of publishers and
 clients and hides from the CDN both the content it is serving and the users
