interim commit on intro

--- a/oakland/paper.tex
+++ b/oakland/paper.tex
@@ -17,8 +17,8 @@
 \date{}
 \title{\LARGE{\bf OCDN: Oblivious Content Distribution Networks}}
 \author{
-\aufnt{\AUTHORS} \\
-\affaddr{Affiliation}
+\aufnt{} \\
+\affaddr{}
 }
 
 %%%%%%%%%%%%%%%%%%%%  START OF DOCUMENT  %%%%%%%%%%%%%%%%%
