--- a/oakland/intro.tex
+++ b/oakland/intro.tex
@@ -11,44 +11,51 @@
 %for example, highlights the possibility that governments may move data across
 %borders to facilitate surveillance~\cite{arnbak2015loopholes}.  
 
-Content distribution networks (CDNs) makes the threat to citizens'
-privacy more widespread, because data may be replicated in geographically
-diverse regions, and users may not have purview over where their data is
-stored, or where their traffic goes. Another recent development is that the
-CDNs themselves may become liable for the content that they are hosting. For
-example, the European Union has been considering laws that would remove safe
-harbor protection on copyright infringement for online service providers if
-they do not deploy tools that can automatically inspect and remove infringing
-content~\cite{eu-copyright}. Both of these tussles are currently being
-addressed in the courts, yet the legal outcomes remain ambiguous and
+As Content Distrubtion Networks (CDNs) host an increasing amount of content
+from a diversity of publishers, they are fast becoming targets of requests for
+data about their content and who is requesting it, as well as requests for
+takedown of material ranging from alleged copyright violations to offensive
+content. The shifting legal and political landscape suggests that CDNs may
+soon face liability for the content that they host. For example, the European
+Union has been considering laws that would remove safe harbor protection on
+copyright infringement for online service providers if they do not deploy
+tools that can automatically inspect and remove infringing content~\cite{eu-
+copyright}.  In the United States, various laws under consideration threaten
+aspects of Section 230 of the Communications Decency Act, which protects CDNs
+from federal criminal liability for the content that they host. Tussles
+surrounding speech, from copyright violations to hate speech, are currently
+being addressed in the courts, yet the legal outcomes remain ambiguous and
 uncertain, sometimes with courts issuing opposing rulings in different cases.
-In this paper, we explore alternate designs that could help
-resolve this tussle.
+Regardless of these outcomes, however, CDNs are increasingly in need of {\em technical}
+protections against the liability they might face as a result of content that they
+(perhaps unwittingly) serve.
 
-
-In this paper, we design and implement a content distribution network that
-allows clients to retrieve web objects, while preventing the CDN cache nodes
-from learning either the content that is stored on the cache nodes or the
-content that clients are requesting. We call this system an {\em oblivious
+Towards this end, we design and implement a system that allows clients to
+retrieve web objects from one or more CDNs, while preventing the CDNs from
+learning either (1)~the content that is stored on the cache nodes; or (2)~the
+content that clients request. We call this system an {\em oblivious
 CDN}~(\system{}), because the CDN is oblivious to both the content it is
-storing and the content that clients are requesting. \system{} allows clients to
-request individual objects with identifiers that are encrypted with a key that
-is shared by a proxy and the origin server that is pushing content to
-cache nodes, but is not known to any of the CDN cache nodes.  To do so, the
-origin server publishes content obfuscated with a shared key, which is subsequently 
-shared with a corresponding proxy. To retrieve content, a client forwards her request 
-through a set of peers (other clients) in a way that prevents other clients 
-and the CDN from learning her identity or what content she requested.  After being routed 
-through other clients' proxies, the request is handled by an exit proxy; the exit proxy 
-transforms the URL that it receives
-from a client to an obfuscated identifier using the key shared with the origin
-server. The CDN cache node then returns the object corresponding to the object
-identifier; that object is also encrypted with a key that is shared between
-the origin and the proxy. This approach allows a user to retrieve content from
-a CDN without the cache node ever seeing the URL or the corresponding content.
-Users can use \system{} with minimal modification to their existing configuration and
-specify one of two modes that \system{} operates in, one in which performance is a higher 
-priority and another in which security is a higher priority.
+storing and the content that clients request.
+
+\system{} allows clients to request individual objects with identifiers that
+are encrypted with a key that is shared by an open proxy and the origin server
+that is pushing content to cache nodes, but is not known to any of the CDN
+cache nodes.  To do so, the origin server publishes content obfuscated with a
+shared key, which is subsequently shared with a proxy that is responsible for
+routing requests for objects corresponding to that URL.  A client forwards a
+request for content through a set of peers (\ie, other OCDN clients) in a way
+that prevents both other clients  and the CDN from learning the client
+identity or requested content requested.  After traversing one or more client
+proxies, an exit proxy transforms the URL that it receives from a client to an
+obfuscated identifier using the key that is shares with the origin server
+corresponding to the identifier.  Upon receiving that request from the exit
+proxy, the CDN returns the object corresponding to the object identifier; that
+object is encrypted with a key that is shared between the origin and the
+proxy. This approach allows a user to retrieve content from a CDN without the
+any node in the CDN ever seeing the URL or the corresponding content, or even knowing
+the identity of the client that made the original request. Using \system{} requires
+only minimal modification to existing clients; clients can also configure aspects
+of the system to trade off performance for privacy.
 
 Ensuring that the CDN operator never
 learns information about either (1)~what content is being stored on its cache
@@ -56,7 +63,7 @@ nodes or (2)~which objects individual clients are requesting is
 challenging, due to the many possible inference attacks that a CDN might be
 able to run. For example, previous work has shown that even when web content
 is encrypted, the retrieval of a collection of objects of various sizes can
-yield information about the web page that was being fetched~\cite{panchenko2016website,
+yield information about the web page that was being retrieved~\cite{panchenko2016website,
 cai2012touching}. Similarly, URLs
 can often be inferred from relative popularity in a distribution of web
 requests, even when the requests themselves are encrypted. \system{} addresses
