--- a/oakland/performance.tex
+++ b/oakland/performance.tex
@@ -48,9 +48,9 @@ grows more quickly than TTFB as the file size and latency increase.
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.5\textwidth]{Latency}
-\caption{Time to First Byte and time to complete a request with varying the file size and latency; increasing the latency is representative 
-of increasing the number of client proxies on the path to the exit proxy.}
+\includegraphics[width=.5\textwidth]{Latency_withoutzero}
+\caption{Time to First Byte and time to complete a request with varying the file size and latency; this latency 
+correspondes to $\alpha$ in Figure \ref{fig:impl}.}
 \label{fig:latency}
 \end{figure}
 
