--- a/oakland/security.tex
+++ b/oakland/security.tex
@@ -6,16 +6,16 @@ systems.
 
 \begin{table}[t!]
 \centering
-\begin{tabular}{| l | l | l | l |} 
+\begin{tabular}{| l | c | c | c |} 
 \hline
  {} & Preserves  & Preserves   & Protects \\ 
  {} & Integrity & Confidentiality & Client\\
  {} & at CDN & at CDN & Identity \\
 \hline
  Stickler~\cite{levy2015stickler} & \checkmark & {} & {}\\ 
- Repeat \& Compare~\cite{michalakis2007ensuring} & \checkmark & {} & {}\\
- OCDN & {} & \checkmark & \checkmark\\
+ R \& C~\cite{michalakis2007ensuring} & \checkmark & {} & {}\\
  Tor~\cite{dingledine2004tor} & {} & {} & \checkmark \\
+ {\bf OCDN} & {} & {\bf \checkmark} & {\bf \checkmark} \\
 \hline
 \end{tabular}
 \caption{The security and privacy features offered by related systems.  To our knowledge, 
